# 2024_parse_alio

./: .gitignore  README.md  download_board_member_status.py  download_company_status.py  download_number_board_member.py  main.py  markdown_example.md  preprocess_number_board_member.py  process_board_member_status.py  process_company_status.py  pyproject.toml
data/raw/: apba.json
data/raw/일반현황/: (사)남북교류협력지원협회.html  (재)APEC기후센터.html  (재)예술경영지원센터.html  (재)우체국금융개발원.html  (재)우체국물류지원단.html  (재)우체국시설관리단.html  (재)일제강제동원피해자지원재단.html  (재)축산환경관리원.html  (재)한국보건의료정보원.html  (재)한국우편사업진흥원.html  (주)강원랜드.html  (주)공영홈쇼핑.html  (주)한국가스기술공사.html  88관광개발(주).html  KDI국제정책대학원.html  가축위생방역지원본부.html  강릉원주대학교치과병원.html  강원대학교병원.html  건강보험심사평가원.html  건설근로자공제회.html  건축공간연구원.html  게임물관리위원회.html  경북대학교병원.html  경북대학교치과병원.html  경상국립대학교병원.html  경제인문사회연구회.html  공간정보품질관리원.html  공무원연금공단.html  과학기술사업화진흥원.html  과학기술정책연구원.html  국가과학기술연구회.html  국가과학기술인력개발원.html  국가녹색기술연구소.html  국가생명윤리정책원.html  국가수리과학연구소.html  국가철도공단.html  국가평생교육진흥원.html  국립공원공단.html  국립광주과학관.html  국립낙동강생물자원관.html  (+322 more)
data/raw/임원현황/: (사)남북교류협력지원협회_2023.10.31.html  (재)APEC기후센터_2024.01.17.html  (재)예술경영지원센터_2023.12.26.html  (재)우체국금융개발원_2023.09.06.html  (재)우체국물류지원단_2024.01.05.html  (재)우체국시설관리단_2023.07.04.html  (재)일제강제동원피해자지원재단_2022.11.08.html  (재)축산환경관리원_2023.09.20.html  (재)한국보건의료정보원_2024.01.04.html  (재)한국우편사업진흥원_2024.01.08.html  (주)강원랜드_2024.01.09.html  (주)공영홈쇼핑_2024.02.08.html  (주)한국가스기술공사_2024.01.09.html  88관광개발(주)_2024.02.06.html  가축위생방역지원본부_2024.02.06.html  강릉원주대학교치과병원_2024.01.15.html  강원대학교병원_2024.01.15.html  건강보험심사평가원_2024.01.12.html  (+337 more)
(+362 files in other folders)
