[tool.poetry]
name = "alio-parser"
version = "0.1.0"
description = ""
authors = ["MinDong Sung <mdskylover@gmail.com>"]
readme = "README.md"
packages = [{include = "alio_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.2"
selenium = "^4.17.2"
html-table-parser = "^0.1.0"
pandas = "^2.2.0"
lxml = "^5.1.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
